Fri Jun 22 19:13:05 2001  George Lebl <jirka@5z.com>

	* docs/C/gdm.sgml: fix indirect wait entry, add entries for the
	  showing of different built in sessions (failsafes, chooser)

	* gui/gdmconfig.(c|glade): add toggeling of builtin sessions
	  (failsafes, chooser)

Fri Jun 22 18:53:14 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c: fix up the forward query sending/handeling, fix
	  some wrong freeing too, and fix the hosts_ctl warning by including
	  a prototype.  We finally have chooser stuff all working! Yay!

	* daemon/xdmcp.c, gui/gdmchooser.c: we want to be very careful in
	  what types we pass xdmcp functions, the header does not include
	  areguments in the prototypes, so usage is snarfed from xdm

Fri Jun 22 15:50:00 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c, gui/gdmwm.[ch], gui/gdmlogin.c: unify the
	  xinerama stuff in gdmwm

	* daemon/xdmcp.c: fix warning

Fri Jun 22 15:26:01 2001  George Lebl <jirka@5z.com>

	* daemon/Makefile.am, daemon/choose.[ch], daemon/xdmcp.c,
	  daemon/gdm.h, daemon/display.c:  Rework of how choosing works,
	  should theoretically all work and be complete, but it doesn't work
	  currently

2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/gdmlanguages.c: Added here too.
	* config/locale.alias: Added entry for nynorsk.
	
Sat Jun 16 05:24:39 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: fix warning

Sat Jun 16 04:43:33 2001  George Lebl <jirka@5z.com>

	* daemon/choose.c, daemon/slave.c, daemon/xdmcp.c, daemon/gdm.h:
	  Make choosing somewhat work.  Now always works if local host is
	  chosen, but otherwise seems to have issues.

	* gui/gdmchooser.c: do version checking when under gdm, and display a
	  dialog after max indirect wait time

Fri Jun 15 17:27:38 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c: minor cleanups and i18n fixes 

	* daemon/slave.c, daemon/gdm.h, daemon/xdmcp.c, daemon/choose.c: a
	  bunch of xdmcp related fixes, and actually run the greeter on