@@ -1,3 +1,7 @@
+Fri Jun 22 21:02:21 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmchooser.c: actually implement ScanTime
+
 Fri Jun 22 19:13:05 2001  George Lebl <jirka@5z.com>
 
 	* docs/C/gdm.sgml: fix indirect wait entry, add entries for the
